# snapraid

./: .drone.yml  .gitignore  .travis.yml  AUTHORS  BLUEBOX  CHECK  CHECKSUMS  CNAME  COPYING  HISTORY  INSTALL  INSTALL.windows  Makefile.am  README  TEST  TODO  acinclude.m4  authors.html  autogen.sh  autover.sh  check.c  combo.h  combos.h  community.html  compare.html  config.h  configure.ac  configure.windows  configure.windows-x64  configure.windows-x86  cpu.h  design.html  download.html  dry.c  dup.c  elem.c  elem.h  faq.html  fnmatch.c  fnmatch.h  (+156 more)
.circleci/: config.yml
.github/workflows/: build.yml  codeql-analysis.yml  codeql.yml  release.yml
beta/: compare.html  design.html  download.html  faq.html  howitworks.html  index.html  manual-daemon.html  manual-de.html  manual-es.html  manual-fr.html  manual-it.html  manual-ja.html  manual-ko.html  manual-log.html  manual-pl.html  manual-pt.html  manual-ro.html  manual-ru.html  manual-sv.html  manual-uk.html  manual-zh.html  manual.html  script.js  site.webmanifest  style.css  support.html  ui.html
civetweb/: civetweb.c  external_log_access.inl  external_mg_cry_internal_impl.inl
cmdline/: app.h  bw.c  bw.h  check.c  checker.c  device.c  dry.c  dup.c  elem.c  elem.h  fnmatch.c  fnmatch.h  handle.c  handle.h  import.c  import.h  io.c  io.h  list.c  locate.c  locate.h  mac.c  mac.h  main.c  memory.c  memory.h  metro.c  metrotest.c  mingw.c  mingw.h  mingwapp.c  mkstream.c  mktest.c  murmur3.c  murmur3test.c  museair.c  museairavx.c  museairsse.c  museairtest.c  nano.c  (+41 more)
cov/: index-sort-f.html  index-sort-l.html  index.html
cov/cmdline/: bw.c.func-sort-c.html  bw.c.func.html  bw.c.gcov.html  check.c.func-sort-c.html  check.c.func.html  check.c.gcov.html  device.c.func-sort-c.html  device.c.func.html  device.c.gcov.html  dry.c.func-sort-c.html  dry.c.func.html  dry.c.gcov.html  dup.c.func-sort-c.html  dup.c.func.html  dup.c.gcov.html  elem.c.func-sort-c.html  elem.c.func.html  elem.c.gcov.html  elem.h.func-sort-c.html  elem.h.func.html  elem.h.gcov.html  handle.c.func-sort-c.html  handle.c.func.html  handle.c.gcov.html  import.c.func-sort-c.html  import.c.func.html  import.c.gcov.html  index-sort-f.html  index-sort-l.html  index.html  io.c.func-sort-c.html  io.c.func.html  io.c.gcov.html  list.c.func-sort-c.html  list.c.func.html  list.c.gcov.html  locate.c.func-sort-c.html  locate.c.func.html  locate.c.gcov.html  main.c.func-sort-c.html  (+92 more)
cov/raid/: check.c.func-sort-c.html  check.c.func.html  check.c.gcov.html  combo.h.func-sort-c.html  combo.h.func.html  combo.h.gcov.html  cpu.h.func-sort-c.html  cpu.h.func.html  cpu.h.gcov.html  gf.h.func-sort-c.html  gf.h.func.html  gf.h.gcov.html  helper.c.func-sort-c.html  helper.c.func.html  helper.c.gcov.html  index-sort-f.html  index-sort-l.html  index.html  int.c.func-sort-c.html  int.c.func.html  int.c.gcov.html  internal.h.func-sort-c.html  internal.h.func.html  internal.h.gcov.html  intz.c.func-sort-c.html  intz.c.func.html  intz.c.gcov.html  memory.c.func-sort-c.html  memory.c.func.html  memory.c.gcov.html  module.c.func-sort-c.html  module.c.func.html  module.c.gcov.html  raid.c.func-sort-c.html  raid.c.func.html  raid.c.gcov.html  tag.c.func-sort-c.html  tag.c.func.html  tag.c.gcov.html  test.c.func-sort-c.html  (+8 more)
cov/tommyds/: index-sort-f.html  index-sort-l.html  index.html  tommyarray.c.func-sort-c.html  tommyarray.c.func.html  tommyarray.c.gcov.html  tommyarray.h.func-sort-c.html  tommyarray.h.func.html  tommyarray.h.gcov.html  tommyarrayblk.c.func-sort-c.html  tommyarrayblk.c.func.html  tommyarrayblk.c.gcov.html  tommyarrayblk.h.func-sort-c.html  tommyarrayblk.h.func.html  tommyarrayblk.h.gcov.html  tommyarrayblkof.c.func-sort-c.html  tommyarrayblkof.c.func.html  tommyarrayblkof.c.gcov.html  tommyarrayblkof.h.func-sort-c.html  tommyarrayblkof.h.func.html  tommyarrayblkof.h.gcov.html  tommychain.h.func-sort-c.html  tommychain.h.func.html  tommychain.h.gcov.html  tommyhash.c.func-sort-c.html  tommyhash.c.func.html  tommyhash.c.gcov.html  tommyhash.h.func-sort-c.html  tommyhash.h.func.html  tommyhash.h.gcov.html  tommyhashdyn.c.func-sort-c.html  tommyhashdyn.c.func.html  tommyhashdyn.c.gcov.html  (+18 more)
daemon/: daemon.c  portable.h  runner.c  state.h  support.c  support.h
debian/: autoreconf.after  autoreconf.before  changelog  control  copyright
doc/: snapraid-de.1  snapraid-de.d  snapraid-de.txt  snapraid-es.1  snapraid-es.d  snapraid-es.txt  snapraid-fr.1  snapraid-fr.d  snapraid-fr.txt  snapraid-it.1  snapraid-it.d  snapraid-it.txt  snapraid-ja.1  snapraid-ja.d  snapraid-ja.txt  snapraid-ko.1  snapraid-ko.d  snapraid-ko.txt  snapraid-pl.1  snapraid-pl.d  snapraid-pl.txt  snapraid-pt.1  snapraid-pt.d  snapraid-pt.txt  snapraid-ro.1  snapraid-ro.d  snapraid-ro.txt  snapraid-ru.1  snapraid-ru.d  snapraid-ru.txt  snapraid-sv.1  snapraid-sv.d  snapraid-sv.txt  snapraid-uk.1  snapraid-uk.d  snapraid-uk.txt  snapraid-zh.1  snapraid-zh.d  snapraid-zh.txt  snapraid.1  (+5 more)
man/: snapraid_log.1
os/: mingw.c  mingw.h  os.h  portable.h  unix.c  unix.h
pkg/: .PKGINFO.in  .SRCINFO.in  PKGBUILD.in  README  control.in  doinst.sh  slack-desc  snapraid.SlackBuild.in  snapraid.info.in  snapraid.spec.in
raid/: avx2.c  avx512.c  check.c  combo.h  cpu.h  gf.h  gfni.c  helper.c  helper.h  int.c  internal.h  intz.c  memory.c  memory.h  mktables.c  module.c  neon.c  raid.c  raid.h  sort.c  sse2.c  ssse3.c  tables.c  tag.c  test.c  test.h  x86.c  x86z.c
src/: check.c  dup.c  fnmatch.h  mingw.h  parity.c  scan.c  scrub.c  selftest.c  snapraid.h  state.c  sync.c
test/: test-btrfs.conf  test-par1.conf  test-par2.conf  test-par3.conf  test-par4.conf  test-par5.conf  test-par6-hole.conf  test-par6-noaccess.conf  test-par6-rename.conf  test-par6-thermal.conf  test-par6.conf  test-parz.conf  test-snap.conf  test_invariant_main.c
tommyds/: LICENSE  tommy.c  tommyarray.c  tommyarray.h  tommyarrayblk.c  tommyarrayblk.h  tommyarrayblkof.c  tommyarrayblkof.h  tommychain.h  tommyhash.c  tommyhash.h  tommyhashdyn.c  tommyhashdyn.h  tommylist.c  tommylist.h  tommytree.c  tommytree.h  tommytypes.h
(+29 files in other folders)
